tests/ui/rfcs/rfc-2632-const-trait-impl/issue-88155.stderr
error[E0015]: cannot call non-const fn `<T as A>::assoc` in constant functions
  --> $DIR/issue-88155.rs:10:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
